--- a/client/app/directives/missionInfo/missionInfo.jade
+++ b/client/app/directives/missionInfo/missionInfo.jade
@@ -1,3 +1,1 @@
-span(ng-repeat="round in $ctrl.Game.model.rounds")
- span(ng-class="{current: $ctrl.Game.model.currRound==$index, pass: round.result > 0, fail: round.result < 0}") {{round.passfails.length}}
- span{{round.fail == 2 ? '*' : ''}}{{$last ? '' : ', '}}
+svg
