--- a/client/app/directives/missionVote/missionVote.jade
+++ b/client/app/directives/missionVote/missionVote.jade
@@ -1,6 +1,29 @@
-button.btn.btn-info-outline(ng-click='$ctrl.acceptMission()', ng-show="$ctrl.Game.model.status === 3") Accept Mission
-button.btn.btn-primary-outline(ng-click='$ctrl.rejectMission()', ng-show="$ctrl.Game.model.status === 3") Reject Mission
-
-button.btn.btn-success(ng-click='$ctrl.passMission()', ng-show="$ctrl.Game.model.status === 4 && $ctrl.GameData.onMission") Pass Mission
-button.btn.btn-danger(ng-click='$ctrl.failMission()', ng-show="$ctrl.Game.model.status === 4 && $ctrl.GameData.onMission") Fail Mission
-
+div(ng-show="$ctrl.Game.model.status === 2")
+  div(ng-show="$ctrl.GameData.isLeader")
+    h4.text-center You are the Team Leader. Pick {{$ctrl.GameData.currRound.passfails.length}} agents for Mission {{$ctrl.Game.model.currRound + 1}}.
+    .container.col-xs-offset-3.col-xs-6.col-sm-offset-4.col-sm-4
+      button.btn.btn-primary.active(ng-click='$ctrl.proposeMission()', ng-show="$ctrl.GameData.selected.size === $ctrl.GameData.currRound.passfails.length") Propose Mission
+  div(ng-show="!$ctrl.GameData.isLeader")
+    h4.text-center {{$ctrl.Game.model.nameHash[$ctrl.GameData.currLeader]}} is picking a team.
+div(ng-show="$ctrl.Game.model.status === 3")
+  br
+  span Team Leader {{$ctrl.Game.model.nameHash[$ctrl.GameData.currLeader]}} has proposed the team:&nbsp;
+  span(ng-repeat="index in $ctrl.GameData.currRound.participants") {{$ctrl.Game.model.nameHash[$ctrl.GameData.playerList[index]]}}{{$last ? '' : ', '}}
+  span &nbsp; to go on the Round {{$ctrl.Game.model.currRound + 1}} Mission.
+  div(ng-show="$ctrl.GameData.playerIndex >= 0")
+    br
+    .container.col-xs-offset-3.col-xs-6.col-sm-offset-4.col-sm-4
+      .btn-block
+        button.btn.btn-info.btn-block(ng-click='$ctrl.acceptMission()') Accept Team
+        br
+        button.btn.btn-primary.btn-block(ng-click='$ctrl.rejectMission()') Reject Team
+div(ng-show="$ctrl.Game.model.status === 4")
+  div(ng-show="$ctrl.GameData.onMission")
+    h4.text-center You are on the Round {{$ctrl.Game.model.currRound + 1}} Mission:
+    .container.col-xs-offset-3.col-xs-6.col-sm-offset-4.col-sm-4
+      .btn-block
+        button.btn.btn-primary.btn-block(ng-click='$ctrl.passMission()') Complete Mission
+        br
+        button.btn.btn-danger.btn-block(ng-click='$ctrl.failMission()') Sabotage Mission
+  div(ng-show="!$ctrl.GameData.onMission")
+    h4.text-center Waiting on Mission results
