--- a/client/app/directives/endGame/endGame.jade
+++ b/client/app/directives/endGame/endGame.jade
@@ -1,5 +1,8 @@
 div(ng-show="$ctrl.showEnd")
-  h4(ng-show="$ctrl.Game.model.status === 5") Resistance Win
-  h4(ng-show="$ctrl.Game.model.status === 6") Spies Win
-  button.btn.btn-primary.active(ng-click='$ctrl.leaveGame()') Leave Game
-  button.btn.btn-primary(ng-click='$ctrl.newGame()', ng-show="$ctrl.Player.model._id == $ctrl.Game.model.players[0]") New Game
+  h4.text-center(ng-show="$ctrl.Game.model.status === 5") Resistance Win
+  h4.text-center(ng-show="$ctrl.Game.model.status === 6") Spies Win
+
+  .container.col-xs-offset-3.col-xs-6.col-sm-offset-4.col-sm-4
+    .btn-block
+      button.btn.btn-primary.active.btn-block(ng-click='$ctrl.leaveGame()') Leave Game
+      button.btn.btn-primary.btn-block(ng-click='$ctrl.newGame()', ng-show="$ctrl.Player.model._id == $ctrl.Game.model.players[0]") New Game
