add debug option, clean print statements

--- a/client/app/directives/navbar/navbar.jade
+++ b/client/app/directives/navbar/navbar.jade
@@ -17,3 +17,6 @@
             div(ng-show="$ctrl.GameData.showRole") Hide Info
         //- li(ng-repeat='item in nav.menu', ui-sref-active='active')
         //-   a(ui-sref='{{item.state}}') {{item.title}}
+        li
+          div.glyphicon.glyphicon-fullscreen
+
