mouseover for d3js. change this to onClick later

--- a/client/app/directives/endGame/endGame.jade
+++ b/client/app/directives/endGame/endGame.jade
@@ -1,6 +1,6 @@
 div(ng-show="$ctrl.showEnd")
-  h4.text-center(ng-show="$ctrl.Game.model.status === 5") Resistance Win
-  h4.text-center(ng-show="$ctrl.Game.model.status === 6") Spies Win
+  h4.text-center(ng-show="$ctrl.Game.model.status === 5") Resistance Win!
+  h4.text-center(ng-show="$ctrl.Game.model.status === 6") Spies Win!
 
   .container.col-xs-offset-3.col-xs-6.col-sm-offset-4.col-sm-4
     .btn-block
