--- a/client/app/root/game/lobby/lobby.jade
+++ b/client/app/root/game/lobby/lobby.jade
@@ -1,38 +1,3 @@
-//- div This is the lobby view.
-
-//- header#banner.hero-unit
-//-   .container
-//-     h1 'Allo, 'Allo!
-//-     p.lead Kick-start your next web app with Angular Fullstack
-//-     img(src='assets/images/yeoman.png', alt='I\'m Yeoman')
-
-//- .container
-//-   .row
-//-     .col-lg-12
-//-       h1.page-header Features:
-//-       ul.nav.nav-tabs.nav-stacked.col-md-4.col-lg-4.col-sm-6(ng-repeat='thing in $ctrl.awesomeThings')
-//-         li
-//-           a(href='#', uib-tooltip='{{thing.info}}')
-//-             | {{thing.name}}
-//-             button.close(type='button', ng-click='$ctrl.deleteThing(thing)') &times;
-
-//-   form.thing-form
-//-     label Syncs in realtime across clients
-//-     p.input-group
-//-       input.form-control(type='text', placeholder='Add a new thing here.', ng-model='$ctrl.newThing')
-//-       span.input-group-btn
-//-         button.btn.btn-primary(type='submit', ng-click='$ctrl.addThing()') Add New
-//- div
-  //- ul.nav.nav-tabs(role="tablist")
-  //-   li.active(role="presentation")<a href="#home" aria-controls="home" role="tab" data-toggle="tab">Players
-  //-   li(role="presentation")<a href="#profile" aria-controls="profile" role="tab" data-toggle="tab">Profile
-  //-   li(role="presentation")<a href="#messages" aria-controls="messages" role="tab" data-toggle="tab">Messages
-  //-   li(role="presentation")<a href="#settings" aria-controls="settings" role="tab" data-toggle="tab">Settings
-  //- div.tab-content
-  //-   div.tab-pane.fade.in.active(role="tabpanel" id="home")
-  //-   div.tab-pane.fade(role="tabpanel" id="profile")
-  //-   div.tab-pane.fade(role="tabpanel" id="messages")
-  //-   div.tab-pane.fade(role="tabpanel" id="settings")
 .container.col-xs-offset-1.col-xs-10
   h2 Game ID: {{$ctrl.Game.model._id}}
   form
@@ -40,22 +5,15 @@
       input.form-control.text-center.btn-block(type="text" ng-model="$ctrl.newName" placeholder="enter new name" maxlength=15)
     .form-group.col-xs-4.col-sm-4
       button.btn.btn-default(type="submit" ng-click="$ctrl.changeName()") Set Name
-.container.col-xs-offset-2.col-xs-10
-  h4 Players:
-  player-list
-  //- div.panel.panel-default
-  //-   div.panel-heading
-  //-     h4.panel-title current players:
-  //-   div.panel-body
-  //-     span(ng-repeat="player in $ctrl.Game.model.players") {{$ctrl.Game.model.nameHash[player]}}
-  //-       br
-  //-     div.container.text-center(style="padding-top: 20px")
 
+.container.col-xs-offset-3.col-xs-6.col-sm-offset-2.col-sm-3.col-md-2
   br
-  br
-  button.btn.btn-primary(ng-click='$ctrl.leaveGame()') Leave Game
-  br
-  br
-  button.btn.btn-primary(ng-click='$ctrl.startGame()', ng-show="$ctrl.Player.model._id == $ctrl.Game.model.players[0] && $ctrl.Game.model.players.length > 4") Start Game
-
-
+  .centered
+    h4 Players:
+    player-list
+  .btn-block
+    br
+    br
+    button.btn.btn-primary.btn-block(ng-click='$ctrl.leaveGame()') Leave Game
+    br
+    button.btn.btn-primary.btn-block(ng-click='$ctrl.startGame()', ng-show="$ctrl.Player.model._id == $ctrl.Game.model.players[0] && $ctrl.Game.model.players.length > 4") Start Game
