--- a/client/app/directives/missionVote/missionVote.jade
+++ b/client/app/directives/missionVote/missionVote.jade
@@ -1,6 +1,6 @@
 div(ng-show="$ctrl.Game.model.status === 2")
   div(ng-show="$ctrl.GameData.isLeader")
-    h4.text-center You are the Team Leader. Pick {{$ctrl.GameData.currRound.passfails.length}} agents for Mission {{$ctrl.Game.model.currRound + 1}}.
+    h4.text-center You are the Team Leader. Pick {{$ctrl.GameData.currRound.passfails.length}} agents for the {{$ctrl.numbered[$ctrl.Game.model.currRound]}} mission.
     .container.col-xs-offset-3.col-xs-6.col-sm-offset-4.col-sm-4
       .btn-block
         button.btn.btn-primary.btn-block(ng-click='$ctrl.proposeMission()', ng-show="$ctrl.GameData.selected.size === $ctrl.GameData.currRound.passfails.length") Propose Mission
@@ -10,8 +10,8 @@ div(ng-show="$ctrl.Game.model.status === 3")
   br
   span Team Leader {{$ctrl.Game.model.nameHash[$ctrl.GameData.currLeader]}} has proposed the team:&nbsp;
   span(ng-repeat="index in $ctrl.GameData.currRound.participants") {{$ctrl.Game.model.nameHash[$ctrl.GameData.playerList[index]]}}{{$last ? '' : ', '}}
-  span &nbsp; to go on the Round {{$ctrl.Game.model.currRound + 1}} Mission.
-  div(ng-show="$ctrl.GameData.playerIndex >= 0")
+  span &nbsp; to go on the {{$ctrl.numbered[$ctrl.Game.model.currRound]}} mission.
+  div(ng-show="$ctrl.GameData.playerIndex >= 0 && $ctrl.GameData.currRound.votes[$ctrl.GameData.playerIndex] === 0")
     br
     .container.col-xs-offset-3.col-xs-6.col-sm-offset-4.col-sm-4
       .btn-block
@@ -20,9 +20,9 @@ div(ng-show="$ctrl.Game.model.status === 3")
         button.btn.btn-primary.btn-block(ng-click='$ctrl.rejectMission()') Reject Team
 div(ng-show="$ctrl.Game.model.status === 4")
   div(ng-show="$ctrl.GameData.onMission")
-    h4.text-center You are on the Round {{$ctrl.Game.model.currRound + 1}} Mission:
+    h4.text-center You are on the {{$ctrl.numbered[$ctrl.Game.model.currRound]}} mission:
     .container.col-xs-offset-3.col-xs-6.col-sm-offset-4.col-sm-4
-      .btn-block
+      .btn-block(ng-show="$ctrl.GameData.currRound.passfails[$ctrl.GameData.currRound.participants.indexOf($ctrl.GameData.playerIndex)] === 0")
         button.btn.btn-primary.btn-block(ng-click='$ctrl.passMission()') Complete Mission
         br
         button.btn.btn-danger.btn-block(ng-click='$ctrl.failMission()') Sabotage Mission
