--- a/client/app/root/game/lobby/lobby.jade
+++ b/client/app/root/game/lobby/lobby.jade
@@ -17,3 +17,5 @@
     button.btn.btn-primary.btn-block(ng-click='$ctrl.leaveGame()') Leave Game
     br
     button.btn.btn-primary.btn-block(ng-click='$ctrl.startGame()', ng-show="$ctrl.Player.model._id == $ctrl.Game.model.players[0] && $ctrl.Game.model.players.length > 4") Start Game
+.container.col-xs-12
+  h4.text-center(ng-show="$ctrl.Game.model.players.length < 4") Need at least 5 players to start
